--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HF'
 - !lcsh 'Department stores'
+- GITenberg
 title: How Department Stores Are Carried On
 url: http://www.gutenberg.org/ebooks/31073
